--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>Jess' To Do's</header>
+    <header>Jess' List</header>
     <div class="inputField">
-      <input type="text" placeholder="Add your new todo">
+      <input type="text" placeholder="Add your new task">
       <button><i class="fas fa-plus"></i></button>
     </div>
     <ul class="todoList">
